Fixed some typos Changed dot-app to dot-dev because google thinks they own the bloody internet changed project folder to be in the home directory instead of dropbox

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,7 +98,7 @@ set -g default-terminal "screen-256color"
 # status bar
 set-option -g status-utf8 on
 
-# Somewimes we close windows, might be usefull to recount them
+# Sometimes we close windows, might be usefull to recount them
 #bind R
 #move-window -r ; display-message "Done..."
 # Updated Tmux 1.7, Set this as an option
