--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,7 +96,7 @@ set-window-option -g automatic-rename
 set -g default-terminal "screen-256color"
 
 # status bar
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 
 # Sometimes we close windows, might be usefull to recount them
 #bind R
