Fixed keybinding in Tmux Fixed project mapping

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 #bind-key v split-window -h # h for vertical, cause logic... 
 #bind-key h split-window  # defaults to horizontal 
 # How about making it more obvious
-bind | split-window -h
-bind - split-window -v
+bind-key | split-window -h
+bind-key - split-window -v
 
 # default window title colors
 set-window-option -g window-status-fg colour244 #base0
