--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# set-option -g status-attr default
 
 # reload ~/.tmux.conf using PREFIX r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -14,22 +14,22 @@ bind-key | split-window -h
 bind-key - split-window -v
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
+# set-window-option -g window-status-fg colour244 #base0
+# set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-fg colour166 #orange
+#set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+#set-option -g pane-border-fg colour235 #base02
+#set-option -g pane-active-border-fg colour240 #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+#set-option -g message-bg colour235 #base02
+#set-option -g message-fg colour166 #orange
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
@@ -44,7 +44,7 @@ set -g status-left-length 40        # 40 chars should fit most hostname i guess?
 set -g status-right-length 140      # Tell me stuff ! :-D 
 
 # Change path if you dont like dropbox ;-)
-set -g status-right '#[fg=red,dim,bg=default]#(osascript ~/Dropbox/.conf/spotify.scrpt)#[fg=green,bg=default,bright] |#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%A %H:%M:%S #[default] #[fg=yellow]%d-%m-%Y'
+# set -g status-right '#[fg=red,dim,bg=default]#(osascript ~/Dropbox/.conf/spotify.scrpt)#[fg=green,bg=default,bright] |#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%A %H:%M:%S #[default] #[fg=yellow]%d-%m-%Y'
 set -g status-left '#(whoami)@#(hostname -s)'
 
 # C-b is not acceptable -- Vim uses it
@@ -71,9 +71,9 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Vi copypaste mode
-set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+#set-window-option -g mode-keys vi
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
 
 # hjkl pane traversal
 bind h select-pane -L
