Apple Music and Spotify now playin in Tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ set -g status-left-length 40        # 40 chars should fit most hostname i guess?
 set -g status-right-length 140      # Tell me stuff ! :-D 
 
 # Change path if you dont like dropbox ;-)
-# set -g status-right '#[fg=red,dim,bg=default]#(osascript ~/Dropbox/.conf/spotify.scrpt)#[fg=green,bg=default,bright] |#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%A %H:%M:%S #[default] #[fg=yellow]%d-%m-%Y'
+set -g status-right '#[fg=green,dim,bg=default]#(osascript $HOME/.conf/spotify.scrpt ; osascript $HOME/.conf/music.scrpt)#[fg=green,bg=default,bright] |#(tmux-mem-cpu-load 1) #[fg=red,dim,bg=default]#() #[fg=white,bg=default]%A %H:%M:%S #[default] #[fg=yellow]%d-%m-%Y'
 set -g status-left '#(whoami)@#(hostname -s)'
 
 # C-b is not acceptable -- Vim uses it
